fix: configuração final do CORS para deploy